# requirements-hierarchy

./: README.md  requirements.txt
scripts/pip/streamlit/: requirements.txt
scripts/pipenv/streamlit/: Pipfile
scripts/poetry/streamlit/: pyproject.toml
scripts/streamlit/: requirements.txt  streamlit.py
